fix: scrollbar styles

--- a/docs/.vitepress/theme/index.css
+++ b/docs/.vitepress/theme/index.css
@@ -1,7 +1,3 @@
-:root {
-  --b-bg: #f5f5f5;
-}
-
 body {
   margin: 0;
   overflow-x: hidden;
